# unplanned_travel_planner

./: .gitignore  README.md  itinerary.md  pyproject.toml
knowledge/: user_preference.txt
knowledge/guides/: budget_allocation.md  flight_research.md  hotel_research.md  itinerary_planning.md  sightseeing_research.md
src/unplanned_travel_planner/: __init__.py  crew.py  main.py
src/unplanned_travel_planner/config/: agents.yaml  tasks.yaml
src/unplanned_travel_planner/tools/: get_weather_data.py
tests/: test_crew_setup.py  test_input_processing.py
