[project]
name = "unplanned_travel_planner"
version = "0.1.0"
description = "unplanned_travel_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.0,<1.0.0"
]

[project.scripts]
unplanned_travel_planner = "unplanned_travel_planner.main:run"
run_crew = "unplanned_travel_planner.main:run"
train = "unplanned_travel_planner.main:train"
replay = "unplanned_travel_planner.main:replay"
test = "unplanned_travel_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
